objects/HealthCloudGA__CarePlanRecordType__mdt.object
<CustomObject>
    <description>Valid Care Plan record types for Health Cloud.</description>
    <fields>
        <fullName>HealthCloudGA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CaseRecordTypeName__c</fullName>
        <description>Name of record type on Case object which is valid for Health Cloud</description>
        <label>Case Record Type Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CaseRecordTypeNamespace__c</fullName>
        <description>Care Plan record type namespace.</description>
        <label>Record Type Namespace</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default record type to be applied to Patient&apos;s care plan.</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <label>Care Plan Record Type</label>
    <pluralLabel>Care Plan Record Types</pluralLabel>
</CustomObject>